--- a/cloudpilot-ionic/package.json
+++ b/cloudpilot-ionic/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng run app:build:production",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
