--- a/src/Makefile
+++ b/src/Makefile
@@ -124,6 +124,7 @@ SOURCE_EMU = \
 	emulator/hardware/EmRegsEZ.cpp \
 	emulator/hardware/EmRegsVZ.cpp \
 	emulator/hardware/EmSPISlaveADS784x.cpp \
+	emulator/hardware/EmRegsUSBPhilipsPDIUSBD12.cpp \
 	emulator/hardware/EmRegsEZPalmV.cpp \
 	emulator/hardware/EmBankROM.cpp \
 	emulator/hardware/EmUAEGlue.cpp \
