--- a/cloudpilot-ionic/package.json
+++ b/cloudpilot-ionic/package.json
@@ -23,7 +23,9 @@
     "@ionic-native/splash-screen": "^5.31.1",
     "@ionic-native/status-bar": "^5.31.1",
     "@ionic/angular": "^5.5.4",
+    "@types/md5": "^2.3.0",
     "@types/uuid": "^8.3.0",
+    "md5": "^2.3.0",
     "rxjs": "~6.6.3",
     "tslib": "^2.0.0",
     "uuid": "^8.3.2",
