--- a/cloudpilot-ionic/package.json
+++ b/cloudpilot-ionic/package.json
@@ -25,6 +25,7 @@
     "@ionic/angular": "^5.5.4",
     "@types/md5": "^2.3.0",
     "@types/uuid": "^8.3.0",
+    "async-mutex": "^0.3.0",
     "md5": "^2.3.0",
     "rxjs": "~6.6.3",
     "tslib": "^2.0.0",
