--- a/cloudpilot-ionic/package.json
+++ b/cloudpilot-ionic/package.json
@@ -23,9 +23,11 @@
     "@angular/router": "~11.1.2",
     "@angular/service-worker": "~11.1.2",
     "@ionic/angular": "^5.5.4",
+    "@types/deep-equal": "^1.0.1",
     "@types/md5": "^2.3.0",
     "@types/uuid": "^8.3.0",
     "async-mutex": "^0.3.0",
+    "deep-equal": "^2.0.5",
     "md5": "^2.3.0",
     "microevent.ts": "^0.2.1",
     "rxjs": "~6.6.3",
