Plumbing, hook up PWM in JS.

--- a/src/Makefile
+++ b/src/Makefile
@@ -61,7 +61,8 @@ LDFLAGS_EMCC_WEB = -O3 -Wno-version-check \
 	-s ENVIRONMENT="web,worker" \
 	-s ALLOW_MEMORY_GROWTH=1 \
 	-s INITIAL_MEMORY=67108864 \
-	-s EXTRA_EXPORTED_RUNTIME_METHODS=["ccall"] \
+	-s ALLOW_TABLE_GROWTH=1 \
+	-s EXTRA_EXPORTED_RUNTIME_METHODS=["ccall","addFunction"] \
 	-s LLD_REPORT_UNDEFINED
 
 BUILDDIR_NATIVE = .build
