Preliminary PWA assets.

--- a/cloudpilot-ionic/angular.json
+++ b/cloudpilot-ionic/angular.json
@@ -26,6 +26,11 @@
                 "output": "assets"
               },
               {
+                "glob": "**/*",
+                "input": "src/assets-pwa",
+                "output": "assets-pwa"
+              },
+              {
                 "glob": "**/*.svg",
                 "input": "node_modules/ionicons/dist/ionicons/svg",
                 "output": "./svg"
