--- a/cloudpilot-ionic/tsconfig.json
+++ b/cloudpilot-ionic/tsconfig.json
@@ -13,6 +13,7 @@
     "target": "es2015",
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
+    "resolveJsonModule": true,
     "strict": true,
     "lib": [
       "es2018",
