Add the proper incantations for deployment.

--- a/.github/workflows/preview-release.yaml
+++ b/.github/workflows/preview-release.yaml
@@ -2,6 +2,7 @@ name: Build preview release
 on: workflow_dispatch
 env:
   EM_VERSION: 2.0.14
+  NODE_VERSION: 14
   EM_CACHE_FOLDER: emsdk-cache
   PAGES_REPO_URL: git@github.com:cloudpilot-emu/cloudpilot-emu.github.io.git
 jobs:
@@ -10,41 +11,44 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      # - name: Setup cache
-      #   id: cache-system-libraries
-      #   uses: actions/cache@v2
-      #   with:
-      #     path: ${{env.EM_CACHE_FOLDER}}
-      #     key: ${{env.EM_VERSION}}-${{ runner.os }}
-      # - name: Setup emscripten
-      #   uses: mymindstorm/setup-emsdk@v7
-      #   with:
-      #     version: ${{env.EM_VERSION}}
-      #     actions-cache-folder: ${{env.EM_CACHE_FOLDER}}
-      # - name: Build wasm
-      #   run: make -Csrc -j2 emscripten
-      # - name: Setup node
-      #   uses: actions/setup-node@v2
-      #   with:
-      #     node-version: '14'
-      # - name: Install node deps
-      #   working-directory: cloudpilot-ionic
-      #   run: yarn install
-      # - name: Build PWA
-      #   working-directory: cloudpilot-ionic
-      #   run: yarn build --configuration production,preview,ci
+      - name: Setup cache
+        id: cache-system-libraries
+        uses: actions/cache@v2
+        with:
+          path: ${{env.EM_CACHE_FOLDER}}
+          key: ${{env.EM_VERSION}}-${{ runner.os }}
+      - name: Setup emscripten
+        uses: mymindstorm/setup-emsdk@v7
+        with:
+          version: ${{env.EM_VERSION}}
+          actions-cache-folder: ${{env.EM_CACHE_FOLDER}}
+      - name: Build wasm
+        run: make -Csrc -j2 emscripten
+      - name: Setup node
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{env.NODE_VERSION}}
+      - name: Install node deps
+        working-directory: cloudpilot-ionic
+        run: yarn install
+      - name: Build PWA
+        working-directory: cloudpilot-ionic
+        run: yarn build --configuration production,preview,ci --base-href /app-preview
       - name: Setup SSH agent
         uses: webfactory/ssh-agent@v0.5.1
         with:
             ssh-private-key: ${{ secrets.SSH_DEPLOY_KEY }}
       - name: Checkout pages source
         run: git clone ${{env.PAGES_REPO_URL}}
-      - name: Deploy application
+      - name: Copy and deploy
         working-directory: cloudpilot-emu.github.io
         run: |
-          test -x test && rm -fr test
-          mkdir test
-          echo hello deploy > test/foo
+          test -x app-preview && rm -fr app-preview
+          cp -r ../cloudpilot-ionic/www ./app-preview
+          test -x sdl-preview && rm -fr sdl-preview
+          mkdir -p sdl-preview/src
+          cp ../index.html sdl-preview
+          cp ../src/cloudpilot.js ../src/cloudpilot.wasm sdl-preview/src
           git add .
           git config --global user.email "golem@nowhere.org"
           git config --global user.name "The Golem"
