--- a/cloudpilot-ionic/angular.json
+++ b/cloudpilot-ionic/angular.json
@@ -86,6 +86,9 @@
                 {
                   "replace": "src/environments/environment.ts",
                   "with": "src/environments/environment.preview.ts"
+                }, {
+                  "replace": "src/revision.ts",
+                  "with": "src/revision.gen.ts"
                 }
               ]
             },
