--- a/cloudpilot-ionic/angular.json
+++ b/cloudpilot-ionic/angular.json
@@ -65,7 +65,7 @@
               ],
               "optimization": true,
               "outputHashing": "all",
-              "sourceMap": false,
+              "sourceMap": true,
               "namedChunks": false,
               "aot": true,
               "extractLicenses": true,
