--- a/cloudpilot-ionic/ngsw-config.json
+++ b/cloudpilot-ionic/ngsw-config.json
@@ -32,8 +32,8 @@
           "/svg/add-outline.svg",
           "/svg/chevron-back.svg",
           "/svg/create-outline.svg",
-          "/svg/save-outline.svg",
-          "/svg/attach-outline.svg",
+          "/svg/share-outline.svg",
+          "/svg/refresh-outline.svg",
           "/svg/trash-outline.svg",
           "/svg/help-outline.svg",
           "/svg/volume-mute-outline.svg",
