--- a/cloudpilot-ionic/package.json
+++ b/cloudpilot-ionic/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cloudpilot-ionic",
-  "version": "1.0.0-beta2",
+  "version": "1.0.0",
   "author": "Christian Speckner",
   "homepage": "https://cloudpilot-emu.github.io/",
   "scripts": {
