--- a/cloudpilot-ionic/angular.json
+++ b/cloudpilot-ionic/angular.json
@@ -40,6 +40,11 @@
                 "input": "../src",
                 "output": "."
               },
+              {
+                "glob": "CHANGELOG.md",
+                "input": "..",
+                "output": "assets/doc"
+              },
               "src/manifest.webmanifest"
             ],
             "styles": [
